<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sports Tracker</string>
    
    <string name="tab_main">Main</string>
    <string name="tab_map">Map</string>
    <string name="tab_list">List</string>
    
    <string name="tab_info">Info</string>
    <string name="tab_route">Route</string>
    <string name="tab_graphs">Graphs</string>
    
    <string name="activity_title_tracker">Sports Tracker</string>
    <string name="activity_title_settings">Settings</string>
    <string name="activity_title_info">Info</string>
    <string name="activity_title_about">About</string>
    
    <string name="about_developer">Valeriy Fomin</string>
    <string name="about_sources">github.com/valfom/sports-tracker</string>
    <string name="about_feedback">valfom.com@gmail.com</string>
    <string name="about_version">Version</string>
    
    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_pause">Pause</string>
    <string name="btn_resume">Resume</string>
    <string name="btn_save">Save</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_map">Map</string>
    <string name="btn_satellite">Satellite</string>
    <string name="btn_lock">Lock</string>
    <string name="btn_unlock">Unlock</string>
    <string name="btn_find_my_location">Find my location</string>
    <string name="btn_add_marker">Add marker</string>
    
    <string name="title_activity">Activity</string>
    <string name="title_duration">Duration</string>
    <string name="title_altitude">Altitude</string>
    <string name="title_altitude_gain">Gain Altitude</string>
    <string name="title_altitude_loss">Loss Altitude</string>
    <string name="title_altitude_max">Max Altitude</string>
    <string name="title_altitude_min">Min Altitude</string>
    <string name="title_altitude_cur">Current Altitude</string>
    <string name="title_distance">Distance</string>
    <string name="title_speed">Speed</string>
    <string name="title_cur_speed">Current Speed</string>
    <string name="title_avg_speed">Avg Speed</string>
    <string name="title_max_speed">Max Speed</string>
    <string name="title_pace">Pace</string>
    <string name="title_date">Date</string>
    <string name="title_avg_pace">Avg Pace</string>
    <string name="title_max_pace">Max Pace</string>
    
    <string name="title_auto_pause">Auto pause activated</string>
    <string name="msg_unable_find_location">Unable to find your location</string>
    <string name="marker_title">Coordinates</string>
    
    <string name="dialog_delete_title">Deletion</string>
    <string name="dialog_delete_message">Delete track?</string>
    
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="dialog_btn_delete">Delete</string>
    <string name="dialog_btn_save">Save</string>
    
    <string name="general_on_exit">Press Back button again to exit</string>
    <string name="general_starting_gps">Starting GPS&#8230;</string>
    <string name="general_empty_listview">List of tracks is empty</string>
    
    <string name="default_value_speed">0</string>
    <string name="default_value_altitude">0</string>
    <string name="default_value_distance">0.00</string>
    <string name="default_value_duration">00:00:00</string>
    <string name="default_value_pace">00:00</string>
    <string name="default_unit_pace">min/km</string>
    
    <string name="notif_ticker">Tracking started</string>
    <string name="notif_title">Tracker</string>
    <string name="notif_text">Tracking&#8230;</string>
    
    <string name="settings_category_tracking">Tracking</string>
    <string name="settings_category_display">Display</string>
    <string name="settings_category_personal">Personal</string>
    <string name="settings_category_about">About</string>
    <string name="settings_category_map">Map</string>
    
    <string name="settings_measurement_units">Measurement units</string>
    <string name="settings_units_metric">Metric (km/h, km, m)</string>
    <string name="settings_units_imperial">Imperial (mph, mi, m)</string>
    
    <string name="settings_auto_pause">Auto pause</string>
    <string name="settings_autopause_threshold">Threshold</string>
    
    <string name="settings_custom_route">Custom route</string>
    <string name="settings_low_threshold">Low threshold</string>
    <string name="settings_middle_threshold">Middle threshold</string>
    
    <string name="settings_default_value_low_threshold">60</string>
    <string name="settings_default_value_middle_threshold">100</string>
    <string name="settings_default_value_autopause_threshold">5</string>
    
    <string name="settings_about">About Sports Tracker</string>
    <string name="settings_rate">Rate App</string>
    
    <string name="kph">km/h</string>
    <string name="mph">mph</string>
    <string name="km">km</string>
    <string name="mi">mi</string>
    <string name="m">m</string>
    <string name="min">min</string>
</resources>