<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent" >

    <ScrollView
        android:id="@+id/svMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rlBtns" >

        <TableLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*" >

            <TableRow
                android:id="@+id/tableRow1Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_header" >

                <TextView
                    android:id="@+id/tvDurationTitle"
                    android:layout_column="1"
                    android:text="@string/title_duration" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvDuration"
                    android:layout_column="1"
                    android:text="@string/default_value_duration"
                    android:textSize="40dp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_header" >

                <TextView
                    android:id="@+id/tvDistanceTitle"
                    android:layout_column="1"
                    android:text="@string/title_distance" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvDistance"
                    android:layout_column="1"
                    android:text="@string/default_value_distance"
                    android:textSize="40dp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_header" >

                <TextView
                    android:id="@+id/tvMaxSpeedTitle"
                    android:text="@string/title_max_speed" />

                <TextView
                    android:id="@+id/tvAvgSpeedTitle"
                    android:text="@string/title_avg_speed" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvMaxSpeed"
                    android:text="@string/default_value_speed"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/tvAvgSpeed"
                    android:text="@string/default_value_speed"
                    android:textSize="30dp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_header" >

                <TextView
                    android:id="@+id/tvCurSpeedTitle"
                    android:layout_column="1"
                    android:text="@string/title_cur_speed" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvCurSpeed"
                    android:layout_column="1"
                    android:text="@string/default_value_speed"
                    android:textSize="30dp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow5Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_header" >

                <TextView
                    android:id="@+id/tvMaxPaceTitle"
                    android:text="@string/title_max_speed" />

                <TextView
                    android:id="@+id/tvAvgPaceTitle"
                    android:text="@string/title_avg_pace" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvMaxPace"
                    android:text="@string/default_value_pace"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/tvAvgPace"
                    android:text="@string/default_value_pace"
                    android:textSize="30dp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow6Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_header" >

                <TextView
                    android:id="@+id/tvMaxAltitudeTitle"
                    android:text="@string/title_altitude_max" />

                <TextView
                    android:id="@+id/tvMinAltitudeTitle"
                    android:text="@string/title_altitude_min" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvMaxAltitude"
                    android:text="@string/default_value_altitude"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/tvMinAltitude"
                    android:text="@string/default_value_altitude"
                    android:textSize="30dp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow7Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_header" >

                <TextView
                    android:id="@+id/tvAltitudeGainTitle"
                    android:text="@string/title_altitude_gain" />

                <TextView
                    android:id="@+id/tvAltitudeLossTitle"
                    android:text="@string/title_altitude_loss" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvAltitudeGain"
                    android:text="@string/default_value_altitude"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/tvAltitudeLoss"
                    android:text="@string/default_value_altitude"
                    android:textSize="30dp" />
            </TableRow>
        </TableLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/rlBtns"
        style="@style/Panel"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/startBtn"
            style="@style/CustomButton.Start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_start" />

        <Button
            android:id="@+id/stopBtn"
            style="@style/CustomButton.Stop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_stop"
            android:visibility="gone" />

        <Button
            android:id="@+id/pauseBtn"
            style="@style/CustomButton.Pause"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_pause"
            android:visibility="gone" />
    </LinearLayout>
    
                <TextView
                    android:id="@+id/tvAutoPause"
                    android:layout_width="match_parent"
                android:layout_height="wrap_content"
                    android:text="@string/title_auto_pause"
                    android:textSize="20dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvDistanceUnit"
                    android:layout_width="match_parent"
                android:layout_height="wrap_content"
                    android:text="@string/km" />

                <TextView
                    android:layout_width="match_parent"
                android:layout_height="wrap_content"
                    android:id="@+id/tvActivity"
                    style="@style/ListItemActivity"
                    android:layout_marginLeft="20dp" />
                <TextView
                    android:layout_width="match_parent"
                android:layout_height="wrap_content"
                    android:id="@+id/tvSpeedTitle"
                    android:text="@string/title_speed"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="match_parent"
                android:layout_height="wrap_content"
                    android:id="@+id/tvMaxSpeedUnit"
                    android:text="@string/kph" />

                <TextView
                    android:layout_width="match_parent"
                android:layout_height="wrap_content"
                    android:id="@+id/tvAvgSpeedUnit"
                    android:text="@string/kph" />

                <TextView
                    android:layout_width="match_parent"
                android:layout_height="wrap_content"
                    android:id="@+id/tvCurSpeedUnit"
                    android:text="@string/kph" />
                <TextView
                    android:layout_width="match_parent"
                android:layout_height="wrap_content"
                    android:id="@+id/tvPaceTitle"
                    android:text="@string/title_pace"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="match_parent"
                android:layout_height="wrap_content"
                    android:id="@+id/tvMaxPaceUnit"
                    android:text="@string/default_unit_pace" />

                <TextView
                    android:layout_width="match_parent"
                android:layout_height="wrap_content"
                    android:id="@+id/tvAvgPaceUnit"
                    android:text="@string/default_unit_pace" />
                <TextView
                    android:layout_width="match_parent"
                android:layout_height="wrap_content"
                    android:id="@+id/tvAltitudeTitle"
                    android:text="@string/title_altitude"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="match_parent"
                android:layout_height="wrap_content"
                    android:id="@+id/tvAltitudeLossUnit"
                    android:text="@string/m" />

                <TextView
                    android:layout_width="match_parent"
                android:layout_height="wrap_content"
                    android:id="@+id/tvAltitudeGainUnit"
                    android:text="@string/m" />

                <TextView
                    android:layout_width="match_parent"
                android:layout_height="wrap_content"
                    android:id="@+id/tvMaxAltitudeUnit"
                    android:text="@string/m" />

                <TextView
                    android:layout_width="match_parent"
                android:layout_height="wrap_content"
                    android:id="@+id/tvMinAltitudeUnit"
                    android:text="@string/m" />

</RelativeLayout>