<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tvDeveloper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/about_developer" />

    <TextView
        android:id="@+id/tvFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDeveloper"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:autoLink="email"
        android:text="@string/about_feedback" />

    <TextView
        android:id="@+id/tvSources"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvFeedback"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:autoLink="web"
        android:text="@string/about_sources" />

    <TextView
        android:id="@+id/tvAppVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvDeveloper"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp"
        android:text="@string/about_version" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvAppVersion"
        android:layout_alignRight="@+id/tvDeveloper"
        android:layout_marginBottom="37dp"
        android:text="@string/app_name" />

</RelativeLayout>