<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/PanelValues"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvDurationMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:text="@string/default_value_duration"
        android:textColor="@android:color/white"
        android:textSize="20dp" />
    
    <TextView
        android:id="@+id/tvDurationMapTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/tvDurationMap"
        android:layout_below="@+id/tvDurationMap"
        android:paddingBottom="10dp"
        android:text="@string/title_duration"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tvDistanceMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tvDurationMap"
        android:paddingTop="10dp"
        android:paddingLeft="40dp"
        android:paddingRight="3dp"
        android:text="@string/default_value_distance"
        android:textColor="@android:color/white"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tvDistanceMapUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvDistanceMap"
        android:layout_toRightOf="@+id/tvDistanceMap"
        android:paddingRight="10dp"
        android:text="@string/km"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tvDistanceMapTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/tvDistanceMap"
        android:layout_below="@+id/tvDurationMap"
        android:paddingBottom="10dp"
        android:text="@string/title_distance"
        android:textColor="@android:color/white" />

</RelativeLayout>