<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tvActivity"
        style="@style/ListItemActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:text="" />

    <TextView
        android:id="@+id/tvDate"
        style="@style/ListItemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvActivity"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/tvActivity"
        android:text="@string/title_date" />

    <TextView
        android:id="@+id/tvDurationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="@+id/tvActivity"
        android:layout_below="@+id/tvActivity"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:text="@string/title_duration" />

    <TextView
        android:id="@+id/tvDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvDurationTitle"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/tvDurationTitle"
        android:text="@string/default_value_duration" />

    <TextView
        android:id="@+id/tvDistanceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvDuration"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/tvDuration"
        android:text="@string/title_distance" />

    <TextView
        android:id="@+id/tvDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvDistanceTitle"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/tvDistanceTitle"
        android:text="@string/default_value_distance" />

    <TextView
        android:id="@+id/tvDistanceUnitList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvDistance"
        android:layout_marginLeft="1dp"
        android:layout_toRightOf="@+id/tvDistance"
        android:text="@string/km" />

    <TextView
        android:id="@+id/tvId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="" />

</RelativeLayout>